--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,13 +5,13 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/test?serverTimezone=UTC&characterEncoding=UTF-8
-    username: root
-    password: jung1209!!
+    username: ${username}
+    password: ${password}
 
 
   jpa:
     database: mysql
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    database-platform: ${org.hibernate.dialect.MySQL5InnoDBDialect}
     hibernate:
       ddl-auto: update
 
