--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,18 +4,16 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test?serverTimezone=UTC&characterEncoding=UTF-8
-    username: ${username}
-    password: ${password}
+    url: jdbc:mysql://${DB_URL}:3306/${DB_NAME}?serverTimezone=UTC&characterEncoding=UTF-8
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
 
 
   jpa:
     database: mysql
-    database-platform: ${org.hibernate.dialect.MySQL5InnoDBDialect}
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
       ddl-auto: update
 
   jackson:
     property-naming-strategy: SNAKE_CASE
-
-
